# ehr-fm

./: .gitignore  TODO.md  bert_set_pool.py  environment.yaml  eval.ipynb  eval.py  eval_msm_head.py  finetune_baselines.py  finetune_gt_behrt.py  flops.ipynb  fm.py  layer.py  merge_mlflow_expr.py  mlflow_ui.sh  readme.md  repr-analysis.md  requirements.txt  run_ablation.py  run_finetune.py  run_finetune.sh  run_training.sh  test.ipynb  test.json  test.py  test_flash_attn.py  test_masking_set_1d.py  test_tokenizer.py  train.py  train_ablation.py  train_baselines.py  train_gt_behrt.py  train_hi_behrt.py  train_hi_behrt_byol.py
config/: fm-config-01.yaml  fm-config-template.yaml  instacart_base.yaml  instacart_bert.yaml  instacart_fm.yaml  instacart_longformer.yaml  instacart_softclt.yaml
dataset/instacart/: README.md  pyproject.toml  view_data.py
dataset/instacart/data/: tk.json
dataset/instacart/src/instacart/: constants.py  definitions.py
dataset/instacart/src/instacart/defs/: assets.py  resources.py
dataset/instacart/src/instacart/defs/transform/: defs.yaml
dataset/instacart/transform/nbr/: dbt_project.yml  profiles.yml
dataset/instacart/transform/nbr/models/: sources.yml  stg.sql
run/: instacart_base.py  instacart_base.slurm  instacart_bert.py  instacart_fm.py  instacart_softclt.py  instacart_softclt.slurm  instacart_tokenizer.py
scripts/: run_baselines.sh  run_finetune.sh  run_finetune_baselines.sh  run_finetune_gt_behrt.sh  run_gt_behrt.sh  run_hi_behrt.sh  run_training.sh
src/: dist_utils.py  fm.py  layer.py  loss.py  metric.py  tokenizer.py  (+1 more)
(+71 files in other folders)
